--- a/Desafio1/DesafioWebApi/People.Consume/People.Consume.csproj
+++ b/Desafio1/DesafioWebApi/People.Consume/People.Consume.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\herli\Desktop\P1\</PublishUrl>
+    <PublishUrl>C:\Users\herli\Documents\VisualStudioProjects\Desafios\GlobaltecDes\Desafio1\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
